<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>de.mhus.nimbus</groupId>
    <artifactId>nimbus</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Nimbus MMORPG System</name>
    <description>A distributed MMORPG system with 2D worlds</description>

    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.30</lombok.version>
        <postgresql.version>42.7.3</postgresql.version>
        <redis.version>4.4.6</redis.version>
        <kafka.version>3.5.1</kafka.version>
        <jwt.version>4.4.0</jwt.version>
        <jackson.version>2.15.2</jackson.version>
    </properties>

    <modules>
        <!-- Shared Libraries -->
        <module>shared</module>
        <module>server-shared</module>
        <module>client-shared</module>
        <module>world-shared</module>

        <!-- Central Services -->
        <module>identity</module>
        <module>registry</module>

        <!-- World Services -->
        <module>world-terrain</module>
        <module>world-life</module>
        <module>world-physics</module>
        <module>world-bridge</module>

        <!-- Bridge Services -->
        <module>client-bridge</module>

        <!-- Client -->
        <module>client</module>

        <!-- Generators -->
        <module>generator-simple</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Internal Dependencies -->
            <dependency>
                <groupId>de.mhus.nimbus</groupId>
                <artifactId>shared</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.mhus.nimbus</groupId>
                <artifactId>server-shared</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.mhus.nimbus</groupId>
                <artifactId>client-shared</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>de.mhus.nimbus</groupId>
                <artifactId>world-shared</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External Dependencies -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${redis.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.kafka</groupId>
                <artifactId>kafka-clients</artifactId>
                <version>${kafka.version}</version>
            </dependency>

            <dependency>
                <groupId>com.auth0</groupId>
                <artifactId>java-jwt</artifactId>
                <version>${jwt.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
